# okapi-rank

./: .gitignore  README.md  constants.py  create_deployment.py  cron_flow.py  cron_script.sh  flow.py  generate_feeds.py  okapi-rank.service  paths.py  pyproject.toml  sample.env  storage.py  test.py  test_flow.py  workflow.py
categories/: __init__.py  base_index.py  categories_to_mappings.ipynb  category_mapping.json  category_mappings.py  category_summary.json  create_mappings.ipynb  new_category_mappings.py  podcast_categories.json  podcast_categories.py  selected_podcast_categories.py
cdn/: README.md  okapi-rank.service  pyproject.toml  sample.env
frontend/: README.md  next.config.ts  package-lock.json  package.json  sample.env
notebook/: scrape_shows_notebook.ipynb
notebooks/: apple_api_query.ipynb  errors.ipynb  find.ipynb  frontend_categories.ipynb  fts5_Full_text_search.ipynb  generate_category_mappings.ipynb  historical_score.ipynb  most_recent.ipynb  related_shows.ipynb  scrape_shows_notebook.ipynb  showpage_json.ipynb  subcategory_counts.ipynb  top_lists.ipynb  top_scores.ipynb  unique_episodes_feeds.ipynb  update_frequency_counts.ipynb
scraper/: .gitignore  package-lock.json  scrape_charts.js  scrape_test.js
sub_tasks/: __init__.py  get_shows.py  scrape_shows.py
tasks/: __init__.py  create_tables.py  generate_category_mappings.py  generate_home_feed.py  generate_search_index.py  generate_section_feeds.py  generate_top_stories.py  get_shows.py  insert_downloads.py  insert_episodes.py  insert_podcasts.py  insert_scores.py  push_feeds.py  scrape_shows.py
test_scraper/: package.json  scrape_charts.js
test_tasks/: __init__.py  (+6 more)
(+750 files in other folders)
